force-app/main/default/objects/uiScreen__c/uiScreen__c.object-meta.xml
<CustomObject>
    <description>Will Display a configurable screen</description>
    <label>UI Screen</label>
    <nameField>
        <label>Screen Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>