force-app/main/default/objects/uiScreen__c/fields/BodyParameters__c.field-meta.xml
<CustomField>
    <fullName>BodyParameters__c</fullName>
    <defaultValue>&#39;{}&#39;</defaultValue>
    <description>The component body parameters object</description>
    <inlineHelpText>The component body parameters object</inlineHelpText>
    <label>Body Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>