force-app/main/default/objects/uiScreen__c/fields/InnerActionsFilter__c.field-meta.xml
<CustomField>
    <fullName>InnerActionsFilter__c</fullName>
    <description>Will be used to render routes in Magic Wand Menu</description>
    <inlineHelpText>Will be used to render routes in Magic Wand Menu</inlineHelpText>
    <label>Inner Actions Filter</label>
    <type>TextArea</type>
</CustomField>