force-app/main/default/objects/uiScreen__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>The Page or Component Api Name</description>
    <inlineHelpText>The Page or Component Api Name</inlineHelpText>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>