force-app/main/default/objects/uiScreen__c/fields/ProgressBarType__c.field-meta.xml
<CustomField>
    <fullName>ProgressBarType__c</fullName>
    <description>Will control the style of the progress bar (base or path)</description>
    <inlineHelpText>Will control the style of the progress bar (base or path)</inlineHelpText>
    <label>Progress Bar Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>base</fullName>
                <default>true</default>
                <label>base</label>
            </value>
            <value>
                <fullName>path</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>