force-app/main/default/objects/uiScreen__c/fields/ScreenCode__c.field-meta.xml
<CustomField>
    <fullName>ScreenCode__c</fullName>
    <displayFormat>SC-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Screen Code</label>
    <type>AutoNumber</type>
</CustomField>