force-app/main/default/objects/uiScreen__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Type of the container that will displayed</description>
    <inlineHelpText>The Type of the container that will displayed</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>LightningComponent</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>