force-app/main/default/objects/uiScreen__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PageName__c</columns>
    <columns>Type__c</columns>
    <columns>ProgressBarType__c</columns>
    <columns>InnerActionsFilter__c</columns>
    <columns>BodyParameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>